# AAPel-cooperativa-alimentos

./:  .env.example  .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Makefile  README.md  SYSTEM_DESIGN.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  drizzle.config.ts  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml
.dev-helpers/: api-logs.sh  backend-up.sh  check-curation.sh  check-env.sh  e2e-backend.sh  e2e-basket.sh  e2e-c3.sh  e2e-frontend.sh  frontend-debug.sh  frontend-foreground.sh  frontend-restart.sh  frontend-up.sh  inspect-api.sh  inspect-api2.sh  inspect-api3.sh  install-fnm.sh  install-node.sh  patch-utcnow.sh  pnpm-install.sh  poll-frontend.sh  preflight.sh  probe-node.sh  probe-node2.sh  probe-register.sh  rebuild-api.sh  restart-api.sh  retest-curation.sh  smoke-test.sh  verify-toolchain.sh  wait-frontend.sh
backend/: README.md  pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py  rate_limit.py  security.py  utils.py
backend/app/models/: __init__.py  _enums_sql.py  basket.py  catalog.py  consent.py  enums.py  logistics.py  order.py  user.py
backend/app/routers/: __init__.py  auth.py  categorias.py  cestas.py  pedidos.py  pontos_coleta.py  produtores.py  produtos.py  zonas_entrega.py
backend/app/routers/admin/: __init__.py  categorias.py  cestas.py  curadorias.py  pontos_coleta.py  produtores.py  produtos.py  zonas_entrega.py
backend/app/schemas/: __init__.py  auth.py  basket.py  catalog.py  delivery.py  order.py  pagination.py
(+109 files in other folders)
